docs/am/4.11/getting-started/configuration/configure-am-gateway/README.md
# AM Gateway

## Overview

There are three different ways to configure AM Gateway components. These are:

* environment variables
* system properties
* `gravitee.yml`

The order in which they are listed above corresponds to their order of precedence. In other words, environment variables override the other two configuration types, and system properties override `gravitee.yml`.

### gravitee.yml

The `gravitee.yml` file, found in `GRAVITEE_HOME/config/`, is the default way to configure AM.

{% hint style="info" %}
YAML (`yml`) format is very sensitive to indentation. Ensure you include the correct number of spaces and use spaces instead of tabs.
{% endhint %}

### System properties

You can override the default AM configuration (`gravitee.yml`) by defining system properties.

To override this property:

{% code title="gravitee.yml" %}
```yaml
repositories:
  management:
    mongodb:
      dbname: myDatabase
```
{% endcode %}

Add this property to the JVM:

```yaml
-Dmanagement.repositories.mongodb.dbname=myDatabase
```

### Environment variables

You can override the default AM configuration (`gravitee.yml`) and system properties by defining environment variables.

To override this property:

{% code title="gravitee.yml" %}
```yaml
repositories:
  management:
    mongodb:
      dbname: myDatabase
```
{% endcode %}

Define one of the following variables:

{% code title="Environment variables" %}
```
GRAVITEE_REPOSITORIES_MANAGEMENT_MONGODB_DBNAME=myDatabase
GRAVITEE.REPOSITORIES.MANAGEMENT.MONGODB.DBNAME=myDatabase
gravitee_repositories_management_mongodb_dbname=myDatabase
gravitee.repositories.management.mongodb.dbname=myDatabase
```
{% endcode %}

Some properties are case-sensitive and cannot be written in uppercase (for example, `gravitee_security_providers_0_tokenIntrospectionEndpoint`. We advise you to define environment variables in lowercase and use the correct syntax for each property.

{% hint style="info" %}
In some systems, hyphens are not allowed in variable names. For example, you may need to write `gravitee_http_cookie_allow-credentials` as `gravitee_http_cookie_allowcredentials` .
{% endhint %}

#### **How to manage arrays?**

Some properties are arrays. For example:

{% code title="gravitee.yml" %}
```yaml
http:
  ssl:
    endpoints:
      - token_endpoint
      - registration_endpoint

security:
  providers:
    - type: ldap
      context-source-username: "cn=Directory Manager"
      context-source-password: "password"
```
{% endcode %}

Below are some examples of how to write your environment variables. In case of doubt, we recommend you try both.

{% code title="" %}
```
gravitee_http_ssl_endpoints_0=token_endpoint
gravitee_http_ssl_endpoints_1=registration_endpoint

gravitee_security_providers_0_type=ldap
gravitee_security_providers_0_context-source-username=cn=Directory Manager
gravitee_security_providers_0_context-source-password=password
```
{% endcode %}

or

{% code title="Environment variables" %}
```
gravitee.http.ssl.endpoints[0]=token_endpoint
gravitee.http.ssl.endpoints[1]=registration_endpoint

gravitee.security.providers[0]type=ldap
gravitee.security.providers[0]context-source-username=cn=Directory Manager
gravitee.security.providers[0]context-source-password=password
gravitee.security.providers[0].users[1].password=password
```
{% endcode %}

## Detailed `gravitee.yml` configuration

### Configure HTTP server

{% hint style="warning" %}
Ensure that you set the `maxRequestSize`. If you do not set the max size request and a request exceeds the maximum request size, the Gateway returns a `400` error with the following message: `Size exceeded the maximum capacity.`
{% endhint %}

You can update the HTTP server configuration in the following section of the `gravitee.yml` file.

{% code title="gravitee.yml" %}
```yaml
http:
  port: 8092
  host: 0.0.0.0
  idleTimeout: 0
  tcpKeepAlive: true
  compressionSupported: false
  maxHeaderSize: 8192
  maxChunkSize: 8192
  maxInitialLineLength: 4096
  maxFormAttributeSize: 2048
  maxRequestSize: 2 # Maximum HTTP request size. The default size is 2KB. -1 means that there is no maximum request limit..
  instances: 0
  secured: false
  alpn: false
```
{% endcode %}

### **Configure Max Size Request**

### **Enable HTTPS support**

First, you need to provide a keystore. If you don't have one, you can generate it:

```sh
keytool -genkey \
  -alias test \
  -keyalg RSA \
  -keystore server-keystore.jks \
  -keysize 2048 \
  -validity 360 \
  -dname CN=localhost \
  -keypass secret \
  -storepass secret
```

You then need to enable secure mode in `gravitee.yml`:

{% code title="gravitee.yml" %}
```yaml
http:
  port: 8092
  idleTimeout: 0
  tcpKeepAlive: true
  compressionSupported: false
  instances: 0
  secured: true
  ssl:
    clientAuth: false
    keystore:
      path: /path/to/keystore.jks
      password: secret
    truststore:
      path:
      password:
```
{% endcode %}

### Configure email

{% code title="gravitee.yml" %}
```yaml
email:
  enabled: false
  host: smtp.my.domain
  subject: "[Gravitee.io] %s"
  port: 587
  from: noreply@my.domain
  username: user@my.domain
  password: password
```
{% endcode %}

{% hint style="info" %}
In order to enforce TLS 1.2 uncomment the properties in the above example and change according to your requirements.
{% endhint %}

#### **Email password and name complexity**

You can configure the complexities as per your organizational requirements. The default settings is shown below:

{% code title="gravitee.yml" overflow="wrap" %}
```yaml
user:
  email:
    policy:
      pattern: ^[a-zA-Z0-9_+-]+(?:\.[a-zA-Z0-9_+-]+)*@(?:[a-zA-Z0-9-]+\.)+[a-zA-Z]{2,7}$
  # Password complexity validation policy
  # Applications should enforce password complexity rules to discourage easy to guess passwords.
  # Passwords should require a minimum level of complexity that makes sense for the application and its user population.
  password:
    policy:
      # Regex pattern for password validation (default to OWASP recommendations).
      # 8 to 32 characters, no more than 2 consecutive equal characters, min 1 special characters (@ & # ...), min 1 upper case character.
      pattern: ^(?:(?=.*\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))(?!.*(.)\1{2,})[A-Za-z0-9!~<>,;:_\-=?*+#."'&§`£€%°()\\\|\[\]\-\$\^\@\/]{8,32}$
        # Example : ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=])(?=\S+$).{8,}$
        # ^                # start-of-string
        #(?=.*[0-9])       # a digit must occur at least once
        #(?=.*[a-z])       # a lower case letter must occur at least once
        #(?=.*[A-Z])       # an upper case letter must occur at least once
        #(?=.*[@#$%^&+=])  # a special character must occur at least once
        #(?=\S+$)          # no whitespace allowed in the entire string
        #.{8,}             # anything, at least eight places though
        #$                 # end-of-string

      ## Password dictionary to exclude most commons passwords
      ## You need to enable the feature in the AM Management Console

      #dictionary:
      #  filename: /path/to/dictionary  # if null `resources/dictionaries/10k-most-common.txt` will be loaded
      #  watch: true #if true, watches periodically for any changes in the file
  name:
    strict:
      policy:
        pattern: ^[^±!@£$%^&*_+§¡€#¢¶•ªº«»\\/<>?:;|=.,]{0,100}$
    lax:
      policy:
        pattern: ^[^±!£$%^&*§¡€¢¶•ªº«»\\/<>?|=]{0,100}$
  username:
    policy:
      pattern: ^[^±!£$%^&*§¡€¢¶•ªº«»\\/<>?:;|=,]{1,100}$
```
{% endcode %}

### Configure the Plugins repository

Gravitee AM Gateway plugins directory configuration.

```yaml
plugins:
  path: ${gravitee.home}/plugins
```

### Configure the Management repository

Management repository is used to store global configurations such as security domains, clients, tokens, users, etc. ​This is the default configuration using MongoDB (single server).

{% code title="gravitee.yml" %}
```yaml
repositories:
  management:
    type: mongodb
    mongodb:
      dbname: ${ds.mongodb.dbname}
      host: ${ds.mongodb.host}
      port: ${ds.mongodb.port}



























#repositories:






#repositories:











```
{% endcode %}

### Configure the client secret hash

As of AM 4.2.0, the client secret can be hashed when stored into the database. Five hash algorithms are supported:

* None (default)
* SHA-256
* SHA-512
* BCrypt
* PBKDF2

To specify which hash algorithm is in used, update the `applications` section of `gravitee.yml`:

```yaml
applications:
  secret:
    # Algorithms used to hash the client secret.
    # Can be one of :
    # "PBKDF2", "BCrypt", "SHA-512", "SHA-256", "None"
    algorithm: None
    #properties:
    #  rounds: 4
```

BCrypt and PBKDF2 support additional properties to adapt the strength of the algorithm.

{% hint style="warning" %}
BCrypt and PBKDF2 are designed to be slow to prevent brute force attacks. The AM default properties are based on the OWASP recommendation. If you plan to use one on these algorithms, we strongly recommend that you evaluate the performance impact of the default settings on your environment, then adapt the property values as needed.
{% endhint %}

#### BCrypt properties

The BCrypt algorithm accepts a number of `rounds`. The default value is 10, as recommended by OWASP.

```yaml
applications:
  secret:
    # Algorithms used to hash the client secret.
    # Can be one of :
    # "PBKDF2", "BCrypt", "SHA-512", "SHA-256", "None"
    algorithm: BCrypt
    properties:
      rounds: 8
```

#### PBKDF2 properties

The PBKDF2 algorithm accepts three properties:

* **rounds**: The number of iterations (default: 600000)
* **salt**: The length in bits of the salt value (default: 16)
* **algorithm**: PBKDF2 with the specified pseudo-random function (default: PBKDF2WithHmacSHA256)

The default values are those recommended by OWASP.

```yaml
applications:
  secret:
    # Algorithms used to hash the client secret.
    # Can be one of :
    # "PBKDF2", "BCrypt", "SHA-512", "SHA-256", "None"
    algorithm: PBKDF2
    properties:
      rounds: 300000
      salt: 16
      algorithm: PBKDF2WithHmacSHA256
```

### Configure HTTP clients

HTTP web clients initiate communication with web servers. For example, communication with external identity providers. HTTP web clients can be configured in the `httpClient` section of the `gravitee.yaml` file.

{% hint style="danger" %}
HTTP/2 support for HTTPS communication is enabled by default. When enabled, the HTTP/2 protocol is preferred if an external server supports it, otherwise communication falls back to HTTP/1.1. HTTP/2 leverages the Application-Layer Protocol Negotiation (ALPN) TLS extension, which often provides a performance improvement. To explicitly disable ALPN and HTTP/2, set `http2 enabled` to `false`.
{% endhint %}

```yaml
httpClient:
  http2:
    enabled: true
    connectionWindowSize: 65535
    keepAliveTimeout: 60 # in seconds
```

### Token request response

By default, all additional parameters, except for the following standard parameters are mapped to `/token` response:

* `access_token`
* `token_type`
* `expires_in`
* `scope`
* `refresh_token`
* `id_token`

To block adding those parameters to response, specify the block in `gravitee.yml`:

```yaml
handlers:
  oauth2:
    response:
      strict: true
```

### Synchronization process

If a configuration is updated on the AM Console, it needs to be propagated on the AM Gateway instances.

In this section, you specify the frequency of the synchronization process using a cron expression. To save database access during user authentication, the synchronization process enables the `permissions` option to load Groups and role definitions into the Gateway memory.

```yaml
services:
  sync:
    enabled: true
    # sync frequency (default: every 5 seconds)
    cron: */5 * * * * *
    # synchronize groups & roles
    permissions: false
```

### Cache

To reduce the load on database, a cache layer is available to manage user profile linked to a session. When this case is enable, the user profile is persisted into a cache using the identifier preserved into the session. As a consequence each request made on the gateway in a scope of a user session will rely on this cache to retrieve the user profile information.

To use this cache layer, first configure a cache implementation before enabling it under the user section.

{% hint style="info" %}
The cache implementations available within AM are either `standalone` or `redis`.

In development environment with a single AM Gateway you can use standalone without issue but for production environment (or any environment with more than one AM Gateway) please use the redis implementation to share the cache between the gateways.
{% endhint %}

```yaml

cache:
  type: redis
  redis:
    host: localhost
    port: 6379
    password: ***
    ssl: false
    ## Sentinel mode settings (optional)
    # sentinel:
    #   master: mymaster
    #   password: ***
    #   nodes:
    #     host: host
    #     port: 6379
    ## SSL options  (optional if ssl is false)
    #hostnameVerificationAlgorithm: NONE
    #trustAll: false
    #keystore:
    #  type: PKCS12
    #  path: /path/to/pkcs.12
    #  password: ***
    #  keyPassword: ***
    #  alias: certalias
    #truststore:
    #  type: PKCS12
    #  path: /path/to/pkcs.12
    #  password: ***
    #  alias: certalias
```

Configuring the `cache` section is not enough, the second step is to enable the cache usage for user profile into the `user` section.

```yaml

user:
  # keep user profile during authentication flow
  # into a cache to limit read access to the Database
  # when the Gateway is looking for the profile linked to the session
  cache:
    enabled: false
    # retention duration in seconds
    ttl: 3600
```

### Configure Token Exchange

Token exchange enables clients to exchange one token for another, supporting both impersonation and delegation scenarios as defined in RFC 8693 OAuth 2.0 Token Exchange. Configure token exchange at the domain level and optionally override scope handling per client.

#### Domain Token Exchange Settings

Configure token exchange at the domain level via `TokenExchangeSettings`:

| Property | Type | Default | Description |
|:---------|:-----|:--------|:------------|
| `enabled` | boolean | `false` | Enable RFC 8693 OAuth 2.0 Token Exchange |
| `allowedSubjectTokenTypes` | Set\<String> | `[ACCESS_TOKEN, REFRESH_TOKEN, ID_TOKEN]` | Token types accepted as `subject_token` |
| `allowedRequestedTokenTypes` | Set\<String> | `[ACCESS_TOKEN]` | Token types that can be requested via `requested_token_type` |
| `allowImpersonation` | boolean | `true` | Allow token exchange without `actor_token` |
| `allowDelegation` | boolean | `false` | Allow token exchange with `actor_token` |
| `allowedActorTokenTypes` | Set\<String> | `[ACCESS_TOKEN, REFRESH_TOKEN, ID_TOKEN]` | Token types accepted as `actor_token` when delegation enabled |
| `maxDelegationDepth` | int | `25` | Maximum depth of nested `act` claims (range: 1-100) |
| `trustedIssuers` | List\<TrustedIssuer> | `[]` | External issuers whose tokens can be exchanged |

#### Trusted Issuer Configuration

Each trusted issuer entry in `trustedIssuers` supports:

| Property | Type | Description |
|:---------|:-----|:------------|
| `issuer` | String | Issuer URL (must match JWT `iss` claim) |
| `keyResolutionMethod` | Enum | `JWKS_URL` or `PEM` |
| `jwksUri` | String | JWKS endpoint URL (required when method is `JWKS_URL`) |
| `certificate` | String | PEM-encoded X.509 certificate (required when method is `PEM`) |
| `scopeMappings` | Map\<String, String> | External scope → domain scope mappings |
| `userBindingEnabled` | boolean | Enable user binding via criteria |
| `userBindingCriteria` | List\<UserBindingCriterion> | EL expressions to match external token claims to domain users |

#### User Binding Criteria

Each `UserBindingCriterion` specifies:

| Property | Type | Description |
|:---------|:-----|:------------|
| `attribute` | String | User attribute to match (e.g., `email`, `username`) |
| `expression` | String | EL expression evaluated against token claims (e.g., `{#context.attributes['token']['email']}`) |

#### Client Token Exchange Settings

Configure scope handling per client via `TokenExchangeOAuthSettings`:

| Property | Type | Default | Description |
|:---------|:-----|:--------|:------------|
| `inherited` | boolean | `true` | Inherit scope handling mode from domain settings |
| `scopeHandling` | Enum | `DOWNSCOPING` | `DOWNSCOPING` (subject/actor scopes cap grants) or `PERMISSIVE` (subject/actor scopes ignored) |

Client scope handling can be inherited from domain defaults or overridden per client.

#### Creating a Token Exchange Request

To exchange a token, the client sends a POST request to the token endpoint with `grant_type=urn:ietf:params:oauth:grant-type:token-exchange`. Include `subject_token` (the token to exchange) and `subject_token_type` (its type URI). Optionally specify `requested_token_type` (defaults to `ACCESS_TOKEN` if allowed), `scope` (space-delimited scopes), and `resource` (target resource URIs). For delegation, include `actor_token` and `actor_token_type`. Authenticate the client using its configured method. The gateway validates the subject token's signature and temporal claims, resolves the user (via trusted issuer binding if applicable), computes allowed scopes based on the configured mode, and issues a new token. The response includes `access_token`, `token_type`, `expires_in`, `issued_token_type`, and `scope` (unless `requested_token_type` is `ID_TOKEN`, in which case `scope` is omitted).
